--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "test": "echo \\\"Error: no test specified\\\" && exit 1",
-    "watch": "nodemon index.js"
+    "watch": "nodemon index.js",
+    "test": "jest --verbose"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
   },
   "homepage": "https://github.com/antero71stud/viikko4#readme",
   "devDependencies": {
+    "jest": "^22.4.0",
     "nodemon": "^1.15.0"
   },
   "dependencies": {
