--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
   },
   "homepage": "https://github.com/antero71stud/viikko4#readme",
   "devDependencies": {
+    "ajv": "^6.1.1",
+    "eslint": "^4.18.1",
     "jest": "^22.4.0",
-    "nodemon": "^1.15.0"
+    "nodemon": "^1.15.0",
+    "peer": "^0.2.8"
   },
   "dependencies": {
     "cors": "^2.8.4",
