--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Viikon 4 harjoitustyö",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "jest --verbose",
-    "watch": "nodemon index.js"
+    "start": "NODE_ENV=production node index.js",
+    "test": "NODE_ENV=test jest --verbose",
+    "watch": "NODE_ENV=development nodemon index.js",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
   "homepage": "https://github.com/antero71stud/viikko4#readme",
   "devDependencies": {
     "ajv": "^6.1.1",
+    "cross-env": "^5.1.3",
     "eslint": "^4.18.1",
     "jest": "^22.4.0",
     "nodemon": "^1.15.0",
