--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "eslint": "^4.18.1",
     "jest": "^22.4.0",
     "nodemon": "^1.15.0",
-    "peer": "^0.2.8"
+    "peer": "^0.2.8",
+    "supertest": "^3.0.0"
   },
   "dependencies": {
     "cors": "^2.8.4",
