--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/antero71stud/viikko4#readme",
   "devDependencies": {
     "ajv": "^6.1.1",
+    "babel-eslint": "^8.2.2",
     "cross-env": "^5.1.3",
     "eslint": "^4.18.1",
     "jest": "^22.4.0",
